opam-version: "2.0"
maintainer: "Jean-Christophe.Filliatre@lri.fr"
authors: "Jean-Christophe Filliâtre"
synopsis: "Resizable Arrays"
description: "aka vectors, dynamic arrays, growable arrays"
license: "LGPL-2.1-only WITH OCaml-LGPL-linking-exception"
homepage: "https://github.com/backtracking/vector"
doc: "https://backtracking.github.io/vector"
bug-reports: "https://github.com/backtracking/vector/issues"
depends: [
  "ocaml"
  "dune" {>= "2.0.0"}
  "nullable-array"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/backtracking/vector.git"

# TODO: not to be merged. Remove once https://github.com/chambart/ocaml-nullable-array/pull/1 is released
pin-depends: [
  [ "nullable-array.dev" "git+https://github.com/craigfe/ocaml-nullable-array#70f8ebe331895daea7519031ddc87ddc52175756" ]
]
